fix header comment for layour.css file

--- a/layout.css
+++ b/layout.css
@@ -1,5 +1,5 @@
 /**
- * Design elements for kunlaborejo template
+ * Tableless layout for kunlaborejo template
  *
  * @author Artem <silentulo cxe gmail.com>
  */
