--- a/design.css
+++ b/design.css
@@ -7,7 +7,7 @@
 /* -------------- general elements --------------- */
 
 body {
-  font: "Lucida Grande", Verdana, Lucida, Helvetica, Arial, sans-serif;
+  font: 0.8em "Lucida Grande", Verdana, Lucida, Helvetica, Arial, sans-serif;
   font-size: 14px;
   background-color: white;
   color: black;
