move meta info to the footer, rearrange items in the footer

--- a/design.css
+++ b/design.css
@@ -33,7 +33,7 @@ body * {
 }
 
 /* ------------ footer ----------------------------*/
-#footer {
+#footer_info {
 	background: #BBCCD9;
 	color #CADCEA;
 }
