--- a/layout.css
+++ b/layout.css
@@ -43,6 +43,17 @@ html, body {
 	min-width: 20em;
 }
 
+#breadcrumbs {
+}
+/* --------------- menu --------------------*/
+#mainmenu {
+	height: 2em;
+}
+
+#submenu {
+	padding: 0.1em 0em;
+}
+
 /* --------------- body --------------------*/
 #left_sidebar {
   float: left;
