--- a/design.css
+++ b/design.css
@@ -22,17 +22,34 @@ body * {
   color: #66A;
 }
 
+#breadcrumbs {
+  background-color: __background_neu__;
+  color: __text_neu__;
+  font-size: 80%;
+  padding: 0 0 0 4px;
+}
+
 /* ------------- header ---------------------------*/
 #header {
 	background: #FAFAFA;
 }
 
+/* ------------- menu -----------------------------*/
+#mainmenu {
+	background: #EEE;
+}
 
+#submenu {
+	background: #DDD;
+	color: black;
+}
+
+
+/* ------------ footer ----------------------------*/
 #page_meta {
   text-align: right;
 }
 
-/* ------------ footer ----------------------------*/
 #footer_info {
 	background: #BBCCD9;
 	color #CADCEA;
