--- a/design.css
+++ b/design.css
@@ -35,6 +35,13 @@ body * {
 	background: #FAFAFA;
 }
 
+#userinfo {
+  background: #EAF2F5;
+  border: 1px solid #DAE2E5;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+}
+
 /* ------------- menu -----------------------------*/
 #mainmenu {
 	background: #EEE;
