--- a/design.css
+++ b/design.css
@@ -32,7 +32,7 @@ body * {
 
 /* ------------- header ---------------------------*/
 #header {
-	background: #FAFAFA;
+	background: #EEE;
 }
 
 #userinfo {
@@ -61,4 +61,5 @@ body * {
 #footer_info {
 	background: #BBCCD9;
 	color #CADCEA;
+	border-top: 0.4em solid #AABBC9
 }
