--- a/layout.css
+++ b/layout.css
@@ -30,8 +30,8 @@ html, body {
 
 /* -------------- header -------------------*/
 #header {
-	height: 4.2em;
-	padding: 0.5em 0em;
+//	height: 4.2em;
+	padding-top: 0.5em;
 }
 
 #logo {
@@ -52,6 +52,8 @@ html, body {
 
 /* --------------- menu --------------------*/
 #mainmenu {
+	clear: both;
+	padding-top: 0.5em;
 	height: 2em;
 }
 
