--- a/design.css
+++ b/design.css
@@ -36,7 +36,7 @@ body * {
 
 /* ------------- header ---------------------------*/
 #header {
-	background: #e1e1e1 url(images/menu-bg.png) repeat-x;
+	background: #f1f1f1 url(images/menu-bg.png) repeat-x;
 }
 
 #userinfo {
