first step in simplifying the design
Make userinfo be smaller and darker.
Now it is placed in the top-right corner

Remove header background

--- a/layout.css
+++ b/layout.css
@@ -40,10 +40,19 @@ html, body {
 
 
 #userinfo {
-	float: right;
-	padding: 0.5em;
-	min-width: 25em;
-	height: 2.6em;
+    position: absolute;
+    top: 0em;
+    right: 0em;
+	padding: 0.4em 1em;
+}
+
+#userinfo form {
+	display: inline;
+}
+
+#userinfo input {
+	width: 10em;
+	font-size: 80%;
 }
 
 #breadcrumbs {
