--- a/design.css
+++ b/design.css
@@ -36,14 +36,11 @@ body * {
 
 /* ------------- header ---------------------------*/
 #header {
-	background: #f1f1f1 url(images/menu-bg.png) repeat-x;
 }
 
 #userinfo {
-  background: #EAF2F5;
-  border: 1px solid #DAE2E5;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
+  background: #555;
+  color: white;
 }
 
 /* ------------- menu -----------------------------*/
