--- a/design.css
+++ b/design.css
@@ -6,9 +6,12 @@
 
 /* -------------- general elements --------------- */
 
+input {
+  font: 14px "Lucida Grande", Verdana, Lucida, Helvetica, Arial, sans-serif;
+}
+
 body {
-  font: 0.8em "Lucida Grande", Verdana, Lucida, Helvetica, Arial, sans-serif;
-  font-size: 14px;
+  font: 14px "Lucida Grande", Verdana, Lucida, Helvetica, Arial, sans-serif;
   background-color: __background_body__;
   color: black;
 }
@@ -30,8 +33,10 @@ body * {
 #breadcrumbs {
   background-color: __background_body__;
   color: __text_neu__;
+}
+
+#breadcrumbs span, #breadcrumbs a{
   font-size: 80%;
-  padding: 0 0 0 4px;
 }
 
 /* ------------- header ---------------------------*/
@@ -79,15 +84,15 @@ body * {
 	border: 0em solid;
 	border-bottom: __header_line_width__ solid #008080;
 	background: __background_body__;
-	top: 0.2em;   // Fix this hack, the button should be positioned automatically
+	top: 0.15em;   // Fix this hack, the button should be positioned automatically
 	margin: 0 0.2em;
 }
 
 #searchtool input.edit {
 	margin: 0 0.2em;
-	border-color: #008000;
-	border-style: solid;
-	border-width: 0.1em 0.1em __header_line_width__ 0.1em;
+	border: 0 solid;
+	border-bottom: __header_line_width__ solid #008000;
+	background: white;
 	width: 15em;
 }
 
