--- a/layout.css
+++ b/layout.css
@@ -10,6 +10,7 @@
 
 html, body {
 	height: 100%;
+	min-width: 60em;
 }
 
 #dokuwiki {
@@ -103,7 +104,6 @@ html, body {
   float: left;
   width: __page_width__;
   margin-left: __page_margin__;
-  border: 1px solid;
 }
 
 #page_meta {
