--- a/design.css
+++ b/design.css
@@ -100,6 +100,17 @@ body * {
 	width: 15em;
 }
 /* ------------ sidebars --------------------------*/
+#left_sidebar {
+	border-right: 0.1em solid #888;
+	padding-right: 1em;
+}
+
+#right_sidebar {
+	border-left: 0.1em solid #888;
+	padding-left: 1em;
+	
+}
+
 .sidebar_box li {
 	font-size: 90%;
     list-style-type: none;
