--- a/design.css
+++ b/design.css
@@ -34,6 +34,15 @@ li.level2, li.level3, li.level4  {
   color: __text_meta__;
 }
 
+.secedit input.button {
+	margin-top: 1em;
+	font-size: 80%;
+}
+
+.secedit form {
+	text-align: right;
+}
+
 /* ------------- header ---------------------------*/
 #header {
 }
@@ -132,11 +141,22 @@ li.level2, li.level3, li.level4  {
 .sidebar_box h1 {
 	font-size: 100%;
 	border-bottom: 0.1px solid #888;
-	margin-top: 1.6em;
+	margin-top: 1.4em;
 }
 
 .sidebar_box h2 {
 	font-size: 90%
+}
+
+.sidebar_box a:visited {
+	color: #0000EE;
+}
+
+
+/* ------------- page -----------------------------*/
+
+#page p {
+	margin-top: 1.4em;
 }
 
 /* ------------ footer ----------------------------*/
