--- a/design_page.css
+++ b/design_page.css
@@ -50,7 +50,10 @@
   display: block;
   text-align: left;
   font-weight: normal;
+  margin-bottom: 1em;
+  margin-left: 40%;
 }
+
 
 #page label.block input.edit {
   width: 50%;
