make header more narrow, move menu to the right

--- a/layout.css
+++ b/layout.css
@@ -68,11 +68,11 @@ html, body {
 }
 
 #mainmenu {
-	padding-top: 1em;
-	clear: both;
+	margin-top: 3.5em;
 }
 
 #mainmenu ul {
+	margin-left: 15em;
 }
 
 #mainmenu li {
