--- a/design.css
+++ b/design.css
@@ -110,9 +110,10 @@ a.wikilink2 {
 
 #mainmenu a.admin {
 	border-bottom: __header_line_width__ solid #800080;
-	padding: 0 0.4em;
-	font-variant: small-caps;
-	text-decoration: none;
+}
+
+#mainmenu li.uconstr a {
+	color: #888;
 }
 
 #mainmenu a:hover {
@@ -182,4 +183,61 @@ a.wikilink2 {
 #config__manager td.label span.outkey {
 	margin-top: -1em;
 	margin-left: 0em;
+}
+
+/* ----------- search form --------------------------*/
+form#dw__search{
+  margin-bottom: 0.2em;
+  display: block;
+  font-size: 100%;
+}
+
+form#dw__search input.edit {
+  display: inline;
+  font-size: 80%;
+}
+
+form#dw__search input.button {
+}
+
+
+/* ----- AJAX Quicksearch ----- */
+div.ajax_qsearch {
+  position: relative;
+  left: 1px;
+  top: 2px;
+  display: none;
+  background: __background__;
+  border-left: none;
+  border-top: none;
+  border-right: none;
+  font-size: 85%;
+  float: left;
+  width: 96%;
+  margin: 0.2em 0 0.5em 0;
+}
+
+div#bar__top div.ajax_qsearch {
+  position: absolute;
+  right: 100px;;
+  width: 200px;
+  font-size: 85%;
+  display: none;
+  border: 1px solid __border__;
+  background: __background__;
+  text-align: left;
+  padding: 0.2em;
+  margin-top: 5px;
+  opacity: 0.9;
+}
+
+div.ajax_qsearch strong {
+  font-size: 100%;
+  background: __background_alt__;
+  padding: 0.2em;
+  display: block;
+}
+
+div.ajax_qsearch li {
+    list-style-type: none;
 }
