--- a/design.css
+++ b/design.css
@@ -75,9 +75,8 @@ a.wikilink2 {
 #logo img {
 }
 
-#userinfo {
-  background: #555;
-  color: white;
+#userinfo, #login__top {
+	font-size: 90%;
 }
 
 #breadcrumbs {
